--- a/css/royal_preloader.css
+++ b/css/royal_preloader.css
@@ -77,7 +77,7 @@ body.royal_preloader {
     bottom: -2px;
     left: -2px;
     border: 4px solid transparent;
-    border-left-color: #ecbf87;
+    border-left-color: #c80032;
     border-radius: 50%;
     -webkit-animation: rotate 1s linear infinite;
        -moz-animation: rotate 1s linear infinite;
